CPP/ifceditor_v1/ifceditor/ifcengine/include/ifcengine.h

#define		sdaiADB					1
#define		sdaiAGGR				sdaiADB + 1
#define		sdaiBINARY				sdaiAGGR + 1
#define		sdaiBOOLEAN				sdaiBINARY + 1
#define		sdaiENUM				sdaiBOOLEAN + 1
#define		sdaiINSTANCE			sdaiENUM + 1
#define		sdaiINTEGER				sdaiINSTANCE + 1
#define		sdaiLOGICAL				sdaiINTEGER + 1
#define		sdaiREAL				sdaiLOGICAL + 1
#define		sdaiSTRING				sdaiREAL + 1
#define		sdaiUNICODE				sdaiSTRING + 1
#define		sdaiEXPRESSSTRING		sdaiUNICODE + 1
#define		engiGLOBALID			sdaiEXPRESSSTRING + 1
typedef	int_t			SdaiModel;
typedef	int_t			SdaiRep;
//
//		sdaiCreateModelBN                                       (http://rdf.bg/ifcdoc/CP64/sdaiCreateModelBN.html)
//				SdaiRep					repository							IN
//				const char				* fileName							IN
//				const char				* schemaName						IN
//
//				SdaiModel				returns								OUT
//
//	This function creates and empty model (we expect with a schema file given).
//	Attributes repository and fileName will be ignored, they are their because of backward compatibility.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
SdaiModel		DECL STDC	sdaiCreateModelBN(
									SdaiRep					repository,
									const char				* fileName,
									const char				* schemaName
								);
//
//
static	inline	SdaiModel	sdaiCreateModelBN(
									SdaiRep					repository,
									char					* fileName,
									char					* schemaName
								)
{
	return	sdaiCreateModelBN(
					repository,
					(const char*) fileName,
					(const char*) schemaName
				);
}
//
//		sdaiCreateModelBNUnicode                                (http://rdf.bg/ifcdoc/CP64/sdaiCreateModelBNUnicode.html)
//				SdaiRep					repository							IN
//				const wchar_t			* fileName							IN
//				const wchar_t			* schemaName						IN
//
//				SdaiModel				returns								OUT
//
//	This function creates and empty model (we expect with a schema file given).
//	Attributes repository and fileName will be ignored, they are their because of backward compatibility.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
SdaiModel		DECL STDC	sdaiCreateModelBNUnicode(
									SdaiRep					repository,
									const wchar_t			* fileName,
									const wchar_t			* schemaName
								);
//
//
static	inline	SdaiModel	sdaiCreateModelBNUnicode(
									SdaiRep					repository,
									wchar_t					* fileName,
									wchar_t					* schemaName
								)
{
	return	sdaiCreateModelBNUnicode(
					repository,
					(const wchar_t*) fileName,
					(const wchar_t*) schemaName
				);
}
//
//		sdaiOpenModelBN                                         (http://rdf.bg/ifcdoc/CP64/sdaiOpenModelBN.html)
//				SdaiRep					repository							IN
//				const char				* fileName							IN
//				const char				* schemaName						IN
//
//				SdaiModel				returns								OUT
//
//	This function opens the model on location fileName.
//	Attribute repository will be ignored, they are their because of backward compatibility.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
SdaiModel		DECL STDC	sdaiOpenModelBN(
									SdaiRep					repository,
									const char				* fileName,
									const char				* schemaName
								);
//
//
static	inline	SdaiModel	sdaiOpenModelBN(
									SdaiRep					repository,
									char					* fileName,
									char					* schemaName
								)
{
	return	sdaiOpenModelBN(
					repository,
					(const char*) fileName,
					(const char*) schemaName
				);
}
//
//		sdaiOpenModelBNUnicode                                  (http://rdf.bg/ifcdoc/CP64/sdaiOpenModelBNUnicode.html)
//				SdaiRep					repository							IN
//				const wchar_t			* fileName							IN
//				const wchar_t			* schemaName						IN
//
//				SdaiModel				returns								OUT
//
//	This function opens the model on location fileName.
//	Attribute repository will be ignored, they are their because of backward compatibility.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
SdaiModel		DECL STDC	sdaiOpenModelBNUnicode(
									SdaiRep					repository,
									const wchar_t			* fileName,
									const wchar_t			* schemaName
								);
//
//
static	inline	SdaiModel	sdaiOpenModelBNUnicode(
									SdaiRep					repository,
									wchar_t					* fileName,
									wchar_t					* schemaName
								)
{
	return	sdaiOpenModelBNUnicode(
					repository,
					(const wchar_t*) fileName,
					(const wchar_t*) schemaName
				);
}
//
//		engiOpenModelByStream                                   (http://rdf.bg/ifcdoc/CP64/engiOpenModelByStream.html)
//				SdaiRep					repository							IN
//				const void				* callback							IN
//				const char				* schemaName						IN
//
//				SdaiModel				returns								OUT
//
//	This function opens the model via a stream.
//	Attribute repository will be ignored, they are their because of backward compatibility.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
SdaiModel		DECL STDC	engiOpenModelByStream(
									SdaiRep					repository,
									const void				* callback,
									const char				* schemaName
								);
//
//
static	inline	SdaiModel	engiOpenModelByStream(
									SdaiRep					repository,
									const void				* callback,
									char					* schemaName
								)
{
	return	engiOpenModelByStream(
					repository,
					callback,
					(const char*) schemaName
				);
}
//
//		engiOpenModelByArray                                    (http://rdf.bg/ifcdoc/CP64/engiOpenModelByArray.html)
//				SdaiRep					repository							IN
//				const unsigned char		* content							IN
//				int_t					size								IN
//				const char				* schemaName						IN
//
//				SdaiModel				returns								OUT
//
//	This function opens the model via an array.
//	Attribute repository will be ignored, they are their because of backward compatibility.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
SdaiModel		DECL STDC	engiOpenModelByArray(
									SdaiRep					repository,
									const unsigned char		* content,
									int_t					size,
									const char				* schemaName
								);
//
//
static	inline	SdaiModel	engiOpenModelByArray(
									SdaiRep					repository,
									const unsigned char		* content,
									int_t					size,
									char					* schemaName
								)
{
	return	engiOpenModelByArray(
					repository,
					content,
					size,
					(const char*) schemaName
				);
}
//
//
static	inline	SdaiModel	engiOpenModelByArray(
									SdaiRep					repository,
									const unsigned char		* content,
									const char				* schemaName
								)
{
	return	engiOpenModelByArray(
					repository,
					content,
					strlen((const char*) content),	//	size
					schemaName
				);
}
//
//		sdaiSaveModelBN                                         (http://rdf.bg/ifcdoc/CP64/sdaiSaveModelBN.html)
//				SdaiModel				model								IN
//				const char				* fileName							IN
//
//				void					returns
//
//	This function saves the model (char file name).
//
void			DECL STDC	sdaiSaveModelBN(
									SdaiModel				model,
									const char				* fileName
								);
//
//
static	inline	void	sdaiSaveModelBN(
								SdaiModel				model,
								char					* fileName
							)
{
	return	sdaiSaveModelBN(
					model,
					(const char*) fileName
				);
}
//
//		sdaiSaveModelBNUnicode                                  (http://rdf.bg/ifcdoc/CP64/sdaiSaveModelBNUnicode.html)
//				SdaiModel				model								IN
//				const wchar_t			* fileName							IN
//
//				void					returns
//
//	This function saves the model (wchar, i.e. Unicode file name).
//
void			DECL STDC	sdaiSaveModelBNUnicode(
									SdaiModel				model,
									const wchar_t			* fileName
								);
//
//
static	inline	void	sdaiSaveModelBNUnicode(
								SdaiModel				model,
								wchar_t					* fileName
							)
{
	return	sdaiSaveModelBNUnicode(
					model,
					(const wchar_t*) fileName
				);
}
//
//		engiSaveModelByStream                                   (http://rdf.bg/ifcdoc/CP64/engiSaveModelByStream.html)
//				SdaiModel				model								IN
//				const void				* callback							IN
//				int_t					size								IN
//
//				void					returns
//
//	This function saves the model as a stream.
//
void			DECL STDC	engiSaveModelByStream(
									SdaiModel				model,
									const void				* callback,
									int_t					size
								);
//
//		engiSaveModelByArray                                    (http://rdf.bg/ifcdoc/CP64/engiSaveModelByArray.html)
//				SdaiModel				model								IN
//				unsigned char			* content							IN / OUT
//				int_t					* size								IN / OUT
//
//				void					returns
//
//	This function saves the model as an array.
//
void			DECL STDC	engiSaveModelByArray(
									SdaiModel				model,
									unsigned char			* content,
									int_t					* size
								);
//
//		sdaiSaveModelAsXmlBN                                    (http://rdf.bg/ifcdoc/CP64/sdaiSaveModelAsXmlBN.html)
//				SdaiModel				model								IN
//				const char				* fileName							IN
//
//				void					returns
//
//	This function saves the model as XML according to IFC2x3's way of XML serialization (char file name).
//
void			DECL STDC	sdaiSaveModelAsXmlBN(
									SdaiModel				model,
									const char				* fileName
								);
//
//
static	inline	void	sdaiSaveModelAsXmlBN(
								SdaiModel				model,
								char					* fileName
							)
{
	return	sdaiSaveModelAsXmlBN(
					model,
					(const char*) fileName
				);
}
//
//		sdaiSaveModelAsXmlBNUnicode                             (http://rdf.bg/ifcdoc/CP64/sdaiSaveModelAsXmlBNUnicode.html)
//				SdaiModel				model								IN
//				const wchar_t			* fileName							IN
//
//				void					returns
//
//	This function saves the model as XML according to IFC2x3's way of XML serialization (wchar, i.e. Unicode file name).
//
void			DECL STDC	sdaiSaveModelAsXmlBNUnicode(
									SdaiModel				model,
									const wchar_t			* fileName
								);
//
//
static	inline	void	sdaiSaveModelAsXmlBNUnicode(
								SdaiModel				model,
								wchar_t					* fileName
							)
{
	return	sdaiSaveModelAsXmlBNUnicode(
					model,
					(const wchar_t*) fileName
				);
}