Android/IFCViewerAndroid/distribution/ifcengine/include/engine.h

#define		OBJECTPROPERTY_TYPE					1
#define		DATATYPEPROPERTY_TYPE_BOOLEAN 		2
#define		DATATYPEPROPERTY_TYPE_CHAR			3
#define		DATATYPEPROPERTY_TYPE_INTEGER		4
#define		DATATYPEPROPERTY_TYPE_DOUBLE		5