C#/StreamingSTPInOut-CS/StreamingIFCInOut-CS/STEPEngine.cs

using System;
using System.Collections.Generic;
using System.Text;
using System.Runtime.InteropServices;
#if _WIN64
		using int_t = System.Int64;
#else
		using int_t = System.Int32;
#endif

namespace StepEngine
{
    class x86_64
    {
        public const int_t flagbit0 = 1;           // 2^^0    0000.0000..0000.0001
        public const int_t flagbit1 = 2;           // 2^^1    0000.0000..0000.0010
        public const int_t flagbit2 = 4;           // 2^^2    0000.0000..0000.0100
        public const int_t flagbit3 = 8;           // 2^^3    0000.0000..0000.1000
        public const int_t flagbit4 = 16;          // 2^^4    0000.0000..0001.0000
        public const int_t flagbit5 = 32;          // 2^^5    0000.0000..0010.0000
        public const int_t flagbit6 = 64;          // 2^^6    0000.0000..0100.0000
        public const int_t flagbit7 = 128;         // 2^^7    0000.0000..1000.0000
        public const int_t flagbit8 = 256;         // 2^^8    0000.0001..0000.0000
        public const int_t flagbit9 = 512;         // 2^^9    0000.0010..0000.0000
        public const int_t flagbit10 = 1024;       // 2^^10   0000.0100..0000.0000
        public const int_t flagbit11 = 2048;       // 2^^11   0000.1000..0000.0000
        public const int_t flagbit12 = 4096;       // 2^^12   0001.0000..0000.0000
        public const int_t flagbit13 = 8192;       // 2^^13   0010.0000..0000.0000
        public const int_t flagbit14 = 16384;      // 2^^14   0100.0000..0000.0000
        public const int_t flagbit15 = 32768;      // 2^^15   1000.0000..0000.0000

        public const int_t sdaiADB           = 1;
        public const int_t sdaiAGGR          = sdaiADB + 1;
        public const int_t sdaiBINARY        = sdaiAGGR + 1;
        public const int_t sdaiBOOLEAN       = sdaiBINARY + 1;
        public const int_t sdaiENUM          = sdaiBOOLEAN + 1;
        public const int_t sdaiINSTANCE      = sdaiENUM + 1;
        public const int_t sdaiINTEGER       = sdaiINSTANCE + 1;
        public const int_t sdaiLOGICAL       = sdaiINTEGER + 1;
        public const int_t sdaiREAL          = sdaiLOGICAL + 1;
        public const int_t sdaiSTRING        = sdaiREAL + 1;
        public const int_t sdaiUNICODE       = sdaiSTRING + 1;
        public const int_t sdaiEXPRESSSTRING = sdaiUNICODE + 1;
        public const int_t engiGLOBALID      = sdaiEXPRESSSTRING + 1;

        public const Int64 OBJECTPROPERTY_TYPE             = 1;
        public const Int64 DATATYPEPROPERTY_TYPE_BOOLEAN   = 2;
        public const Int64 DATATYPEPROPERTY_TYPE_CHAR      = 3;
        public const Int64 DATATYPEPROPERTY_TYPE_INTEGER   = 4;
        public const Int64 DATATYPEPROPERTY_TYPE_DOUBLE    = 5;

        public const string STEPEngineDLL = @"STEPEngine.dll";

        //
        //  File IO API Calls
        //

        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate Int64 ReadCallBackFunction(IntPtr value);

        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate void WriteCallBackFunction(IntPtr value, Int64 size);

		//
		//		sdaiCreateModelBN                           (http://rdf.bg/ifcdoc/CS64/sdaiCreateModelBN.html)
		//
		//	This function creates and empty model (we expect with a schema file given).
		//	Attributes repository and fileName will be ignored, they are their because of backward compatibility.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateModelBN")]
        public static extern Int64 sdaiCreateModelBN(Int64 repository, string fileName, string schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateModelBN")]
        public static extern Int64 sdaiCreateModelBN(Int64 repository, string fileName, byte[] schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateModelBN")]
        public static extern Int64 sdaiCreateModelBN(Int64 repository, byte[] fileName, string schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateModelBN")]
        public static extern Int64 sdaiCreateModelBN(Int64 repository, byte[] fileName, byte[] schemaName);

		//
		//		sdaiCreateModelBNUnicode                    (http://rdf.bg/ifcdoc/CS64/sdaiCreateModelBNUnicode.html)
		//
		//	This function creates and empty model (we expect with a schema file given).
		//	Attributes repository and fileName will be ignored, they are their because of backward compatibility.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateModelBNUnicode")]
        public static extern Int64 sdaiCreateModelBNUnicode(Int64 repository, string fileName, string schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateModelBNUnicode")]
        public static extern Int64 sdaiCreateModelBNUnicode(Int64 repository, string fileName, byte[] schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateModelBNUnicode")]
        public static extern Int64 sdaiCreateModelBNUnicode(Int64 repository, byte[] fileName, string schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiCreateModelBNUnicode")]
        public static extern Int64 sdaiCreateModelBNUnicode(Int64 repository, byte[] fileName, byte[] schemaName);

		//
		//		sdaiOpenModelBN                             (http://rdf.bg/ifcdoc/CS64/sdaiOpenModelBN.html)
		//
		//	This function opens the model on location fileName.
		//	Attribute repository will be ignored, they are their because of backward compatibility.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiOpenModelBN")]
        public static extern Int64 sdaiOpenModelBN(Int64 repository, string fileName, string schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiOpenModelBN")]
        public static extern Int64 sdaiOpenModelBN(Int64 repository, string fileName, byte[] schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiOpenModelBN")]
        public static extern Int64 sdaiOpenModelBN(Int64 repository, byte[] fileName, string schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiOpenModelBN")]
        public static extern Int64 sdaiOpenModelBN(Int64 repository, byte[] fileName, byte[] schemaName);

		//
		//		sdaiOpenModelBNUnicode                      (http://rdf.bg/ifcdoc/CS64/sdaiOpenModelBNUnicode.html)
		//
		//	This function opens the model on location fileName.
		//	Attribute repository will be ignored, they are their because of backward compatibility.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiOpenModelBNUnicode")]
        public static extern Int64 sdaiOpenModelBNUnicode(Int64 repository, string fileName, string schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiOpenModelBNUnicode")]
        public static extern Int64 sdaiOpenModelBNUnicode(Int64 repository, string fileName, byte[] schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiOpenModelBNUnicode")]
        public static extern Int64 sdaiOpenModelBNUnicode(Int64 repository, byte[] fileName, string schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiOpenModelBNUnicode")]
        public static extern Int64 sdaiOpenModelBNUnicode(Int64 repository, byte[] fileName, byte[] schemaName);

		//
		//		engiOpenModelByStream                       (http://rdf.bg/ifcdoc/CS64/engiOpenModelByStream.html)
		//
		//	This function opens the model via a stream.
		//	Attribute repository will be ignored, they are their because of backward compatibility.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiOpenModelByStream")]
        public static extern int_t engiOpenModelByStream(int_t repository, [MarshalAs(UnmanagedType.FunctionPtr)] ReadCallBackFunction callback, string schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "engiOpenModelByStream")]
        public static extern int_t engiOpenModelByStream(int_t repository, [MarshalAs(UnmanagedType.FunctionPtr)] ReadCallBackFunction callback, byte[] schemaName);

		//
		//		engiOpenModelByArray                        (http://rdf.bg/ifcdoc/CS64/engiOpenModelByArray.html)
		//
		//	This function opens the model via an array.
		//	Attribute repository will be ignored, they are their because of backward compatibility.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiOpenModelByArray")]
        public static extern Int64 engiOpenModelByArray(Int64 repository, byte[] content, Int64 size, string schemaName);

        [DllImport(STEPEngineDLL, EntryPoint = "engiOpenModelByArray")]
        public static extern Int64 engiOpenModelByArray(Int64 repository, byte[] content, Int64 size, byte[] schemaName);

		//
		//		sdaiSaveModelBN                             (http://rdf.bg/ifcdoc/CS64/sdaiSaveModelBN.html)
		//
		//	This function saves the model (char file name).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelBN")]
        public static extern void sdaiSaveModelBN(Int64 model, string fileName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelBN")]
        public static extern void sdaiSaveModelBN(Int64 model, byte[] fileName);

		//
		//		sdaiSaveModelBNUnicode                      (http://rdf.bg/ifcdoc/CS64/sdaiSaveModelBNUnicode.html)
		//
		//	This function saves the model (wchar, i.e. Unicode file name).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelBNUnicode")]
        public static extern void sdaiSaveModelBNUnicode(Int64 model, string fileName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelBNUnicode")]
        public static extern void sdaiSaveModelBNUnicode(Int64 model, byte[] fileName);

		//
		//		engiSaveModelByStream                       (http://rdf.bg/ifcdoc/CS64/engiSaveModelByStream.html)
		//
		//	This function saves the model as an array.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiSaveModelByStream")]
        public static extern void engiSaveModelByStream(Int64 model, [MarshalAs(UnmanagedType.FunctionPtr)] WriteCallBackFunction callback, Int64 size);

		//
		//		engiSaveModelByArray                        (http://rdf.bg/ifcdoc/CS64/engiSaveModelByArray.html)
		//
		//	This function saves the model as an array.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiSaveModelByArray")]
        public static extern void engiSaveModelByArray(Int64 model, byte[] content, out int_t size);

		//
		//		sdaiSaveModelAsXmlBN                        (http://rdf.bg/ifcdoc/CS64/sdaiSaveModelAsXmlBN.html)
		//
		//	This function saves the model as XML according to IFC2x3's way of XML serialization (char file name).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelAsXmlBN")]
        public static extern void sdaiSaveModelAsXmlBN(Int64 model, string fileName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelAsXmlBN")]
        public static extern void sdaiSaveModelAsXmlBN(Int64 model, byte[] fileName);

		//
		//		sdaiSaveModelAsXmlBNUnicode                 (http://rdf.bg/ifcdoc/CS64/sdaiSaveModelAsXmlBNUnicode.html)
		//
		//	This function saves the model as XML according to IFC2x3's way of XML serialization (wchar, i.e. Unicode file name).
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelAsXmlBNUnicode")]
        public static extern void sdaiSaveModelAsXmlBNUnicode(Int64 model, string fileName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiSaveModelAsXmlBNUnicode")]
        public static extern void sdaiSaveModelAsXmlBNUnicode(Int64 model, byte[] fileName);
